--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "media-maze",
   "productName": "Media Maze",
   "description": "Media Maze",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
@@ -57,6 +57,9 @@
       "createStartMenuShortcut": true,
       "installerHeaderIcon": "resources/icons/app/icon.ico",
       "installerIcon": "resources/icons/app/icon.ico"
+    },
+    "mac": {
+      "target": "dmg+zip"
     },
     "dmg": {
       "title": "${productName} ${version}"
