--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "media-maze",
   "productName": "Media Maze",
   "description": "Media Maze",
-  "version": "0.1.9",
+  "version": "0.1.7",
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
@@ -59,7 +59,13 @@
       "installerIcon": "resources/icons/app/icon.ico"
     },
     "mac": {
-      "target": "default"
+      "target": "default",
+      "hardenedRuntime": true,
+      "entitlements": "resources/mac/entitlements.mac.plist",
+      "entitlementsInherit": "resources/mac/entitlements.mac.plist"
+    },
+    "dmg": {
+      "sign": false
     },
     "directories": {
       "buildResources": "resources",
