--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,5 +28,6 @@ jobs:
         uses: samuelmeuli/action-electron-builder@v1
         with:
           github_token: ${{ secrets.github_token }}
+          args: '-p always'
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
           node-version: 18
