--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "media-maze",
   "productName": "Media Maze",
   "description": "Media Maze",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
@@ -43,7 +43,7 @@
     "mac": {
       "signIgnore": "*",
       "category": "public.app-category.media",
-      "target": ["default", "pkg"],
+      "target": ["pkg"],
       "hardenedRuntime": false,
       "gatekeeperAssess": false
     },
