--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "media-maze",
   "productName": "Media Maze",
   "description": "Media Maze",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
@@ -68,6 +68,7 @@
     },
     "files": [
       "main.js",
+      "update.json",
       "resources/**/*",
       "app/**/*"
     ]
@@ -85,6 +86,6 @@
     "electron-builder": "~23.6.0"
   },
   "dependencies": {
-    "chuijs": "~1.7.7"
+    "chuijs": "~1.8.0"
   }
 }
