--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   },
   "dependencies": {
     "chuijs": "~2.5.9",
+    "electron-json-storage": "^4.6.0",
     "fast-xml-parser": "^4.3.6",
     "request": "^2.88.2",
     "ym-api-meowed": "^1.3.2"
