--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "electron-json-storage": "^4.6.0",
     "fast-xml-parser": "^4.3.6",
     "request": "^2.88.2",
+    "sqlite3": "^5.1.7",
     "ym-api-meowed": "^1.3.2"
   }
 }
