--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "chuijs": "~2.5.9",
     "fast-xml-parser": "^4.3.6",
     "request": "^2.88.2",
-    "sqlite3": "^5.1.7",
+    "sqlite3": "~5.1.7",
     "ym-api-meowed": "^1.3.2"
   }
 }
