--- a/package.json
+++ b/package.json
@@ -78,10 +78,8 @@
     "electron-builder": "~24.6.4"
   },
   "dependencies": {
-    "chuijs": "~2.6.2",
-    "fast-xml-parser": "^4.3.6",
+    "chuijs": "~2.7.2",
     "request": "^2.88.2",
-    "sqlite3": "5.1.6",
-    "ym-api-meowed": "^1.3.2"
+    "sqlite3": "5.1.6"
   }
 }
