--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "media-maze",
   "productName": "Media Maze",
   "description": "Media Maze",
-  "version": "0.7.6",
+  "version": "0.7.7",
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
@@ -75,13 +75,13 @@
   },
   "homepage": "https://github.com/Saintdizen/media_maze#readme",
   "devDependencies": {
-    "electron-builder": "~24.6.4"
+    "electron-builder": "26.0.12"
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "chuijs": "~3.4.6",
+    "chuijs": "~3.4.7",
     "electron-download-manager": "^2.1.2",
-    "request": "^2.88.2",
+    "request": "2.88.2",
     "sqlite3": "5.1.6"
   }
 }
