--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   },
   "homepage": "https://github.com/Saintdizen/media_maze#readme",
   "devDependencies": {
-    "electron-builder": "26.0.12"
+    "electron-builder": "~24.6.4"
   },
   "dependencies": {
     "axios": "^1.6.8",
