--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "media-maze",
   "productName": "Media Maze",
   "description": "Media Maze",
-  "version": "0.8.2",
+  "version": "0.8.3",
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
@@ -75,11 +75,11 @@
   },
   "homepage": "https://github.com/Saintdizen/media_maze#readme",
   "devDependencies": {
-    "electron-builder": "~24.6.4"
+    "electron-builder": "^24.13.3"
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "chuijs": "~3.5.3",
+    "chuijs": "~3.5.6",
     "electron-download-manager": "^2.1.2",
     "request": "2.88.2",
     "sqlite3": "5.1.6"
